--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name="com.example.apps.com.sistempakar2.HasilDiagnosaActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name="com.example.apps.com.sistempakar2.DataDiriActivity">
+        <activity
+            android:theme="@style/AppTheme.NoActionBar"
+            android:name="com.example.apps.com.sistempakar2.DataDiriActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
